Various fixes - Removed extra padding around modal content - Fixed Minimal Header showing caution circle in Storybook Menu - Fixed CLM story so it shows correct code snippet

--- a/packages/web-components/src/components/va-crisis-line-modal/va-crisis-line-modal.scss
+++ b/packages/web-components/src/components/va-crisis-line-modal/va-crisis-line-modal.scss
@@ -104,7 +104,6 @@ button.va-crisis-line {
 .va-crisis-panel {
   color: var(--color-base);
   &-body {
-    padding: 24px;
     max-height: 100%;
   }
   &-title {
